--- a/vignettes/Package-Introduction.Rmd
+++ b/vignettes/Package-Introduction.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
   comment = "#>"
 )
 ```
-This package was generated for data management of the operational outputs of the deterministic WRF model of the National Meteorological Service (NMS) of Argentina which are available in Amazon Web Services (AWS). To call library:
+This package was generated for data management of the operational outputs of the deterministic Weather Research & Forecasting (WRF) Model of the National Meteorological Service (NMS) of Argentina which are available in Amazon Web Services (AWS). To call library:
 ```{r setup}
 library(aws.wrfsmn)
 ```
